apps/test1/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test1
  namespace: apps
  labels:
    app: test1
spec:
  selector:
    app: test1
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  type: ClusterIP
