apps/test1/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test1
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - test1.vadimzak.com
    secretName: test1-tls
  rules:
  - host: test1.vadimzak.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test1
            port:
              number: 80
